codama-macros/tests/codama_attribute/type_nodes/number_type_node/endian_already_set.fail.rs
use codama::codama;

#[codama(type = number(be, le, u32))]
pub struct Test;

fn main() {}
